# gitno

./: .env  .gitignore  .pylintrc  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: black-format.yml  coverage.yml  publish.yml  pylint.yml  python-publish.yml
gitno/: __main__.py  cli.py  main.py  version.py
src/: app.rs  github.rs  gitignore.rs  lib.rs  main.rs
tests/: test_gitno.py
