[package]
name = "gitno"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6"
home = "0.5"
itertools = "0.12.0"

[dev-dependencies]
mockall = "0.12.1"
