[package]
name = "gitno"
version = "0.1.0"
edition = "2021"
description = "A terminal UI for generating .gitignore files"
readme = "README.md"
repository = "https://github.com/andwati/gitno"
license = "MIT"
keywords = ["cli", "gitignore", "development", "tool"]
categories = ["command-line-utilities", "development-tools"]


[lib]
path = "src/lib.rs"

[[bin]]
name = "gitno"
path = "src/main.rs"

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6"
home = "0.5"
itertools = "0.12.0"

[dev-dependencies]
mockall = "0.12.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
