[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gitno"
version = "0.1.0"
authors = [
    {name = "Ian Andwati", email = "andwatiian@gmail.com"},
]
description = "A commandline gitignore generator"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["git", "gitignore", "cli"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Environment :: Console",
]
dependencies = [
    "requests",
    "click","tqdm",
]

[project.urls]
homepage = "https://github.com/andwati/gitno"
documentation = "https://github.com/andwati/gitno"
repository = "https://github.com/andwati/gitno.git"
changelog = "https://github.com/andwati/gitno"

[project.scripts]
gitno = "gitno.main:cli"

[tool.poetry]
name = "gitno"
version = "0.1.0"
description = ""
authors = ["Ian Andwati <andwatiian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.2"
tqdm = "^4.64.1"




[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"


