[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gitno"
version = "0.1.3"
authors = [
    {name = "Ian Andwati", email = "andwatiian@gmail.com"},
]
description = "A commandline gitignore generator"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["git", "gitignore", "cli"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Environment :: Console",
]
dependencies = [
    "requests",
    "click",
]

[project.urls]
homepage = "https://github.com/andwati/gitno"
documentation = "https://github.com/andwati/gitno"
repository = "https://github.com/andwati/gitno.git"
changelog = "https://github.com/andwati/gitno"

[project.scripts]
gitno = "gitno.main:cli"


